--- a/vsftpd.env
+++ b/vsftpd.env
@@ -1,5 +1,5 @@
 FTP_USER=ftpuser
-FTP_PASS=Tdy7MJYekc$kU4avj{X]3LKW]
+FTP_PASS=123456
 PASV_ADDRESS=127.0.0.1 #replace your host ip with this
 PASV_MIN_PORT=65000
 PASV_MAX_PORT=65100
